--- a/restaurant.html
+++ b/restaurant.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <title>Restaurant Info</title>
+
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <title>Restaurant Info</title>
 </head>
 
 <body class="inside">
