--- a/restaurant.html
+++ b/restaurant.html
@@ -11,7 +11,8 @@
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <!-- <link rel="stylesheet" href="css/styles.bk.css"> -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="inside">
