--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>Restaurant Reviews</title>
 
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <link rel="stylesheet" href="css/normalize.css" />
   <!-- <link rel="stylesheet" href="css/styles.bk.css"> -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
