--- a/restaurant.html
+++ b/restaurant.html
@@ -9,7 +9,7 @@
   <title>Restaurant Info</title>
 
   <!-- Normalize.css for better cross-browser consistency -->
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <link rel="stylesheet" href="css/normalize.css" />
   <!-- Main CSS file -->
   <!-- <link rel="stylesheet" href="css/styles.bk.css"> -->
   <link rel="stylesheet" href="css/styles.css">
