--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
 <body>
   <header>
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
+    <h1><a href="/" alt="Click to refresh the page">Restaurant Reviews</a></h1>
   </header>
 
   <main id="maincontent">
