fix: Correct footer semantic

--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
     </section>
   </main>
 
+  <footer id="footer">
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" alt="Click to refresh the page"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
+  </footer>
+
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
-
-
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
 
 </body>
 
