--- a/restaurant.html
+++ b/restaurant.html
@@ -58,7 +58,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" alt="Click to go back to homepage"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
   </footer>
   <!-- End footer -->
 
