fix: Typo. Replace alt with title in anchor tag

--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/" title="Click to go back to homepage">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
@@ -58,7 +58,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" alt="Click to go back to homepage"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Click to go back to homepage"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
   </footer>
   <!-- End footer -->
 
