--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1><a href="/" alt="Click to refresh the page">Restaurant Reviews</a></h1>
+    <h1><a href="/" title="Click to refresh the page">Restaurant Reviews</a></h1>
   </header>
 
   <main id="maincontent">
@@ -38,7 +38,7 @@
   </main>
 
   <footer id="footer">
-    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" alt="Click to refresh the page"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Click to refresh the page"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
   </footer>
 
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
