--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Click to refresh the page"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
   </footer>
 
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script src="js/dbhelper.js"></script>
+  <script src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
 
 </body>
