fix: Remove header and correct  nav  semantic in restaurant.html

--- a/restaurant.html
+++ b/restaurant.html
@@ -17,20 +17,16 @@
 </head>
 
 <body class="inside">
-  <!-- Beginning header -->
-  <header>
-    <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/" title="Click to go back to homepage">Restaurant Reviews</a></h1>
-    </nav>
+  <!-- Beginning nav -->
+  <nav>
+    <p class="header"><a href="/" title="Click to go back to homepage">Restaurant Reviews</a></p>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+      <li><a href="/" title="Click to go back to homepage">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
-    <!-- End nav -->
-  </header>
-  <!-- End header -->
+  </nav>
+  <!-- End nav -->
 
   <!-- Beginning main -->
   <main id="maincontent">
@@ -70,7 +66,6 @@
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
-
 </body>
 
 </html>
