fix: Place body header into main in restaurant.html

--- a/restaurant.html
+++ b/restaurant.html
@@ -36,13 +36,13 @@
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <header id="restaurant-container">
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
-    </section>
+    </header>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
