--- a/restaurant.html
+++ b/restaurant.html
@@ -19,10 +19,10 @@
 <body class="inside">
   <!-- Beginning nav -->
   <nav>
-    <p class="header"><a href="/" title="Click to go back to homepage">Restaurant Reviews</a></p>
+    <p class="header"><a href="/" title="Click to go back to homepage" aria-label="Restaurant Reviews: Click to go back to homepage">Restaurant Reviews</a></p>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
-      <li><a href="/" title="Click to go back to homepage">Home</a></li>
+      <li><a href="/" title="Click to go back to homepage" aria-label="Home: Click to go back to homepage">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
   </nav>
@@ -54,7 +54,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Click to go back to homepage"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Click to go back to homepage" aria-label="Restaurant Reviews: Click to go back to homepage"><strong>Restaurant Reviews</strong></a>. All Rights Reserved.</p>
   </footer>
   <!-- End footer -->
 
