feat: Add style to .header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <h1><a href="/" title="Click to refresh the page" aria-label="Restaurant Reviews: Click to refresh the page">Restaurant Reviews</a></h1>
   </header>
 
