feat: Add breadcrumb aria attributes

--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
   <nav>
     <p class="header"><a href="/" title="Click to go back to homepage" aria-label="Restaurant Reviews: Click to go back to homepage">Restaurant Reviews</a></p>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" aria-label="Breadcrumb">
       <li><a href="/" title="Click to go back to homepage" aria-label="Home: Click to go back to homepage">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
