style: Correct redundancies in aria-labels

--- a/restaurant.html
+++ b/restaurant.html
@@ -19,11 +19,11 @@
 <body class="inside">
   <!-- Beginning nav -->
   <nav>
-    <p class="header"><a href="/" title="Click to go back to homepage" aria-label="Restaurant Reviews: Click to go back to homepage">Restaurant Reviews</a></p>
+    <p class="header"><a href="/" title="Go back to homepage" aria-label="Restaurant Reviews: Go back to homepage">Restaurant Reviews</a></p>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label="Breadcrumb">
-      <li><a href="/" title="Click to go back to homepage" aria-label="Home: Click to go back to homepage">Home</a></li>
-    </ul>
+    <ol id="breadcrumb" aria-label="Breadcrumb">
+      <li><a href="/" title="Go back to homepage" aria-label="Home: Go back to homepage">Home</a></li>
+    </ol>
     <!-- End breadcrumb -->
   </nav>
   <!-- End nav -->
@@ -54,7 +54,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Click to go back to homepage" aria-label="Restaurant Reviews: Click to go back to homepage"><strong>Restaurant Reviews</strong></a>. All Rights Reserved.</p>
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Go back to homepage" aria-label="Restaurant Reviews: Go back to homepage"><strong>Restaurant Reviews</strong></a>. All Rights Reserved.</p>
   </footer>
   <!-- End footer -->
 
