fix: Remove unnecessary #map-container section and make #map a figure

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
+    <figure id="map"></figure>
     <section>
       <div class="filter-options" role="group" aria-labelledby="filter-legend">
         <p id="filter-legend">Filter Results</p>
