--- a/restaurant.html
+++ b/restaurant.html
@@ -31,9 +31,7 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
+    <figure id="map"></figure>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <header id="restaurant-container">
