fix: Remove unnecessary aria-labels in anchor tags

--- a/restaurant.html
+++ b/restaurant.html
@@ -19,10 +19,10 @@
 <body class="inside">
   <!-- Beginning nav -->
   <nav>
-    <p class="header"><a href="/" title="Go back to homepage" aria-label="Restaurant Reviews: Go back to homepage">Restaurant Reviews</a></p>
+    <p class="header"><a href="/" title="Go back to homepage">Restaurant Reviews</a></p>
     <!-- Beginning breadcrumb -->
     <ol id="breadcrumb" aria-label="Breadcrumb">
-      <li><a href="/" title="Go back to homepage" aria-label="Home: Go back to homepage">Home</a></li>
+      <li><a href="/" title="Go back to homepage">Home</a></li>
     </ol>
     <!-- End breadcrumb -->
   </nav>
@@ -52,7 +52,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Go back to homepage" aria-label="Restaurant Reviews: Go back to homepage"><strong>Restaurant Reviews</strong></a>. All Rights Reserved.</p>
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Go back to homepage"><strong>Restaurant Reviews</strong></a>. All Rights Reserved.</p>
   </footer>
   <!-- End footer -->
 
