fix: Add role to main

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1><a href="/" title="Click to refresh the page">Restaurant Reviews</a></h1>
   </header>
 
-  <main id="main-content">
+  <main id="main-content" role="main">
     <figure id="map"></figure>
     <section class="filter-options" role="group" aria-labelledby="filter-legend">
       <h2 id="filter-legend">Filter Options</h2>
