--- a/restaurant.html
+++ b/restaurant.html
@@ -29,7 +29,7 @@
   <!-- End nav -->
 
   <!-- Beginning main -->
-  <main id="main-content">
+  <main id="main-content" role="main">
     <!-- Beginning map -->
     <figure id="map"></figure>
     <!-- End map -->
