fix: Restore Filter Results text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main id="main-content" role="main">
     <figure id="map"></figure>
     <section class="filter-options" role="group" aria-labelledby="filter-legend">
-      <h2 id="filter-legend">Filter Options</h2>
+      <h2 id="filter-legend">Filter Results</h2>
       <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select a neighborhood" aria-describedby="filter-legend">
         <option value="all">All Neighborhoods</option>
       </select>
