--- a/restaurant.html
+++ b/restaurant.html
@@ -12,11 +12,12 @@
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" href="css/normalize.css" />
   <!-- Main CSS file -->
-  <!-- <link rel="stylesheet" href="css/styles.bk.css"> -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="inside">
+  <a class="skip-link" href="#main-content">Skip to main content</a>
+
   <!-- Beginning nav -->
   <nav>
     <p class="header"><a href="/" title="Go back to homepage">Restaurant Reviews</a></p>
@@ -28,11 +29,12 @@
   </nav>
   <!-- End nav -->
 
+  <!-- Beginning map -->
+  <figure id="map"></figure>
+  <!-- End map -->
+
   <!-- Beginning main -->
   <main id="main-content" role="main">
-    <!-- Beginning map -->
-    <figure id="map"></figure>
-    <!-- End map -->
     <!-- Beginning restaurant -->
     <header id="restaurant-container">
       <h1 id="restaurant-name"></h1>
