fix: Correct semantic of .inside .header

--- a/restaurant.html
+++ b/restaurant.html
@@ -20,7 +20,9 @@
 
   <!-- Beginning nav -->
   <nav>
-    <p class="header"><a href="/" title="Go back to homepage">Restaurant Reviews</a></p>
+    <header class="header">
+      <h2><a href="/" title="Go back to homepage">Restaurant Reviews</a></h2>
+    </header>
     <!-- Beginning breadcrumb -->
     <ol id="breadcrumb" aria-label="Breadcrumb">
       <li><a href="/" title="Go back to homepage">Home</a></li>
@@ -36,7 +38,7 @@
   <!-- Beginning main -->
   <main id="main-content" role="main">
     <!-- Beginning restaurant -->
-    <header id="restaurant-container">
+    <header>
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
