fix: Correct main header

--- a/restaurant.html
+++ b/restaurant.html
@@ -38,13 +38,15 @@
   <!-- Beginning main -->
   <main id="main-content" role="main">
     <!-- Beginning restaurant -->
-    <header>
-      <h1 id="restaurant-name"></h1>
+    <div id="restaurant-container">
+      <header>
+        <h1 id="restaurant-name"></h1>
+      </header>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
-    </header>
+    </div>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
