feat: Add #restaurant-container and table styles

--- a/restaurant.html
+++ b/restaurant.html
@@ -42,10 +42,14 @@
       <header>
         <h1 id="restaurant-name"></h1>
       </header>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
+      <figure>
+        <img id="restaurant-img">
+        <figcaption id="restaurant-cuisine"></figcaption>
+      </figure>
       <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <table id="restaurant-hours">
+        <caption>Restaurant opening times:</caption>
+      </table>
     </div>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
