--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <h1><a href="/" title="Click to refresh the page">Restaurant Reviews</a></h1>
   </header>
 
-  <figure id="map"></figure>
+  <figure id="map" role="application" aria-label="Google Maps shows where are the restaurants" tabindex="0"></figure>
 
   <main id="main-content" role="main">
-    <section class="filter-options" role="group" aria-labelledby="filter-legend">
+    <!-- For search facilities, authors SHOULD use the search role and not the generic form role. https://www.w3.org/WAI/PF/aria-1.1/roles#form -->
+    <section class="filter-options" role="search" aria-labelledby="filter-legend" tabindex="0">
       <h2 id="filter-legend">Filter Results</h2>
       <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select a neighborhood" aria-describedby="filter-legend">
         <option value="all">All Neighborhoods</option>
@@ -32,7 +33,7 @@
         <option value="all">All Cuisines</option>
       </select>
     </section>
-    <section class="results">
+    <section class="results" aria-live="assertive" aria-atomic="true">
       <ul id="restaurants-list"></ul>
     </section>
   </main>
