refactor: Improve .skip-link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <a class="skip-link" href="#main-content">Skip to main content</a>
+  <a class="skip-link button" href="#main-content">Skip to main content</a>
 
   <header class="header">
     <h1><a href="/" title="Click to refresh the page">Restaurant Reviews</a></h1>
