--- a/restaurant.html
+++ b/restaurant.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="inside">
-  <a class="skip-link" href="#main-content">Skip to main content</a>
+  <a class="skip-link button" href="#main-content">Skip to main content</a>
 
   <!-- Beginning nav -->
   <nav aria-label="Banner and breadcrumb">
