fix: Move skip-link after banner

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-  <a class="skip-link button" href="#main-content">Skip to main content</a>
-
   <header class="header">
     <h1><a href="/" title="Click to refresh the page">Restaurant Reviews</a></h1>
   </header>
+
+  <a class="skip-link button" href="#main-content">Skip to main content</a>
 
   <figure id="map" role="application" aria-label="Google Maps shows where are the restaurants" tabindex="0"></figure>
 
@@ -33,7 +33,7 @@
         <option value="all">All Cuisines</option>
       </select>
     </section>
-    <section class="results" aria-live="assertive" aria-atomic="true">
+    <section class="results">
       <ul id="restaurants-list"></ul>
     </section>
   </main>
