feat: Add #results-notice with aria-live

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </select>
     </section>
     <section class="results">
+      <h2 id="results-notice" aria-live="assertive"></h2>
       <ul id="restaurants-list"></ul>
     </section>
   </main>
