--- a/restaurant.html
+++ b/restaurant.html
@@ -46,7 +46,7 @@
         <img id="restaurant-img">
         <figcaption id="restaurant-cuisine"></figcaption>
       </figure>
-      <p id="restaurant-address"></p>
+      <address><p id="restaurant-address"></p></address>
       <table id="restaurant-hours">
         <caption>Restaurant opening times:</caption>
       </table>
