refactor: Title tag in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#263238">
 
-  <title>Restaurant Reviews</title>
+  <title>Restaurant Reviews - Find the best New York City restaurants</title>
 
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
