fix: Correct banner and remove title from link. Add docs.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <a class="skip-link button" href="#main-content">Skip to main content</a>
 
-  <header class="header">
-    <h1><a href="/" title="Click to refresh the page">Restaurant Reviews</a></h1>
+  <header>
+    <h1>Restaurant Reviews</h1>
   </header>
 
   <figure id="map" role="application" aria-label="Google Maps shows where are the restaurants" tabindex="0"></figure>
@@ -40,7 +40,7 @@
   </main>
 
   <footer id="footer">
-    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <a href="/" title="Click to refresh the page"><strong>Restaurant Reviews</strong></a>. All Rights Reserved.</p>
+    <p>Copyright © <script>document.write(new Date().getFullYear());</script> <strong>Restaurant Reviews</strong>. All Rights Reserved.</p>
   </footer>
 
   <script src="js/dbhelper.js"></script>
