feat: Make Google Maps accessible

--- a/restaurant.html
+++ b/restaurant.html
@@ -38,7 +38,11 @@
   <!-- End nav -->
 
   <!-- Beginning map -->
-  <figure id="map" role="application" aria-label="Google Maps shows where is the restaurant" tabindex="0"></figure>
+  <section class="map-container" role="application">
+    <h2 tabindex="0" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
+    <a class="skip-link button" href="#main-content">Skip the map</a>
+    <div id="map"></div>
+  </section>
   <!-- End map -->
 
   <!-- Beginning main -->
