--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     <h1>Restaurant Reviews</h1>
   </header>
 
-  <figure id="map" role="application" aria-label="Google Maps shows where are the restaurants" tabindex="0"></figure>
+  <section class="map-container" role="application">
+    <h2 tabindex="0" class="sr-only">Google Maps Widget: shows restaurants location</h2>
+    <a class="skip-link button" href="#main-content">Skip the map</a>
+    <div id="map"></div>
+  </section>
 
   <main id="main-content" role="main">
     <!-- For search facilities, authors SHOULD use the search role and not the generic form role. https://www.w3.org/WAI/PF/aria-1.1/roles#form -->
-    <section class="filter-options" role="search" aria-labelledby="filter-legend" tabindex="0">
+    <section class="filter-options" role="search">
       <h2 id="filter-legend">Filter Results</h2>
       <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select a neighborhood" aria-describedby="filter-legend">
         <option value="all">All Neighborhoods</option>
