fix: Removed role application from map to fix scroll by keyboard

--- a/restaurant.html
+++ b/restaurant.html
@@ -38,7 +38,7 @@
   <!-- End nav -->
 
   <!-- Beginning map -->
-  <section class="map-container" role="application">
+  <section class="map-container">
     <h2 tabindex="0" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
     <a class="skip-link button" href="#main-content">Skip the map</a>
     <div id="map"></div>
