--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Restaurant Reviews</h1>
   </header>
 
-  <section class="map-container" role="application">
+  <section class="map-container">
     <h2 tabindex="0" class="sr-only">Google Maps Widget: shows restaurants location</h2>
     <a class="skip-link button" href="#main-content">Skip the map</a>
     <div id="map"></div>
