fix: Move map of inside page into aside. Modify skip links.

--- a/restaurant.html
+++ b/restaurant.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="inside">
-  <a class="skip-link button" href="#main-content">Skip to main content</a>
+  <a class="skip-link button" href="#restaurant-container">Skip to main content</a>
 
   <!-- The HTML5 header element is not considered a banner landmark when it is descendant of nav. https://www.w3.org/TR/2017/NOTE-wai-aria-practices-1.1-20171214/examples/landmarks/banner.html -->
   <div role="banner">
@@ -37,16 +37,15 @@
   </nav>
   <!-- End nav -->
 
-  <!-- Beginning map -->
-  <section class="map-container">
-    <h2 tabindex="0" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
-    <a class="skip-link button" href="#main-content">Skip the map</a>
-    <div id="map"></div>
-  </section>
-  <!-- End map -->
-
   <!-- Beginning main -->
   <main id="main-content" role="main">
+    <!-- Beginning map -->
+    <aside class="map-container">
+      <h2 tabindex="0" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
+      <a class="skip-link button" href="#restaurant-container">Skip the map</a>
+      <div id="map"></div>
+    </aside>
+    <!-- End map -->
     <!-- Beginning restaurant -->
     <div id="restaurant-container">
       <header>
