feat: Make table responsive

--- a/restaurant.html
+++ b/restaurant.html
@@ -56,9 +56,11 @@
         <figcaption id="restaurant-cuisine"></figcaption>
       </figure>
       <address><p id="restaurant-address"></p></address>
-      <table id="restaurant-hours">
-        <caption>Restaurant opening times:</caption>
-      </table>
+      <figure class="scrollable-x">
+        <table id="restaurant-hours">
+          <caption>Restaurant opening times:</caption>
+        </table>
+      </figure>
     </div>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
