--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
   <main id="main-content" role="main">
     <!-- For search facilities, authors SHOULD use the search role and not the generic form role. https://www.w3.org/WAI/PF/aria-1.1/roles#form -->
     <section class="filter-options" role="search">
-      <h2 id="filter-legend">Filter Results</h2>
-      <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select a neighborhood" aria-describedby="filter-legend">
-        <option value="all">All Neighborhoods</option>
-      </select>
-      <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Select a cuisine" aria-describedby="filter-legend">
-        <option value="all">All Cuisines</option>
-      </select>
+      <div class="container">
+        <h2 id="filter-legend">Filter Results</h2>
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select a neighborhood" aria-describedby="filter-legend">
+          <option value="all">All Neighborhoods</option>
+        </select>
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Select a cuisine" aria-describedby="filter-legend">
+          <option value="all">All Cuisines</option>
+        </select>
+      </div>
     </section>
-    <section class="results">
+    <section class="results container">
       <h2 id="results-notice" aria-live="assertive"></h2>
       <ul id="restaurants-list"></ul>
     </section>
