refactor: Rearrange styles and html of inside page

--- a/restaurant.html
+++ b/restaurant.html
@@ -48,19 +48,17 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <div id="restaurant-container">
-      <header>
-        <h1 id="restaurant-name"></h1>
-      </header>
-      <figure>
+      <div>
         <img id="restaurant-img">
-        <figcaption id="restaurant-cuisine"></figcaption>
-      </figure>
-      <address><p id="restaurant-address"></p></address>
-      <figure class="scrollable-x">
-        <table id="restaurant-hours">
-          <caption>Restaurant opening times:</caption>
-        </table>
-      </figure>
+        <h1 id="restaurant-name"></h1>
+        <p id="restaurant-cuisine"></p>
+        <address><p id="restaurant-address"></p></address>
+        <figure class="scrollable-x">
+          <table id="restaurant-hours">
+            <caption>Restaurant opening times:</caption>
+          </table>
+        </figure>
+      </div>
     </div>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
