fix: Correct problem with scrolling and add focus outline to #map

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h1>Restaurant Reviews</h1>
   </header>
 
-  <section class="map-container">
-    <h2 tabindex="0" class="sr-only">Google Maps Widget: shows restaurants location</h2>
+  <section id="map-container">
+    <h2 id="map-label" class="sr-only">Google Maps Widget: shows restaurants location</h2>
     <a class="skip-link button" href="#main-content">Skip the map</a>
-    <div id="map"></div>
+    <div id="map" role="application"></div>
   </section>
 
   <main id="main-content" role="main">
