--- a/restaurant.html
+++ b/restaurant.html
@@ -40,10 +40,10 @@
   <!-- Beginning main -->
   <main id="main-content" role="main">
     <!-- Beginning map -->
-    <aside class="map-container">
-      <h2 tabindex="0" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
+    <aside id="map-container">
+      <h2 id="map-label" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
       <a class="skip-link button" href="#restaurant-container">Skip the map</a>
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </aside>
     <!-- End map -->
     <!-- Beginning restaurant -->
