feat: Add container class to page inside

--- a/restaurant.html
+++ b/restaurant.html
@@ -28,17 +28,19 @@
 
   <!-- Beginning nav -->
   <nav aria-label="Breadcrumb">
-    <!-- Beginning breadcrumb -->
-    <ol id="breadcrumb">
-      <!-- Here the title attribute is to avoid, and the link text is enough for accessibility. See above. -->
-      <li><a href="/">Home</a></li>
-    </ol>
-    <!-- End breadcrumb -->
+    <div class="container">
+      <!-- Beginning breadcrumb -->
+      <ol id="breadcrumb">
+        <!-- Here the title attribute is to avoid, and the link text is enough for accessibility. See above. -->
+        <li><a href="/">Home</a></li>
+      </ol>
+      <!-- End breadcrumb -->
+    </div>
   </nav>
   <!-- End nav -->
 
   <!-- Beginning main -->
-  <main id="main-content" role="main">
+  <main id="main-content" class="container" role="main">
     <!-- Beginning map -->
     <aside id="map-container">
       <h2 id="map-label" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
