--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#263238">
 
-  <title>Restaurant Reviews - Find the best New York City restaurants</title>
+  <!-- A meaningful title to the page for better accessibility. -->
+  <title>Restaurant Reviews - Find the Best New York City Restaurants</title>
 
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
@@ -31,10 +32,10 @@
     <section class="filter-options" role="search">
       <div class="container">
         <h2 id="filter-legend">Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select a neighborhood" aria-describedby="filter-legend">
+        <select id="neighborhoods-select" name="neighborhoods" aria-label="Select a neighborhood" aria-describedby="filter-legend">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Select a cuisine" aria-describedby="filter-legend">
+        <select id="cuisines-select" name="cuisines" aria-label="Select a cuisine" aria-describedby="filter-legend">
           <option value="all">All Cuisines</option>
         </select>
       </div>
