--- a/restaurant.html
+++ b/restaurant.html
@@ -43,7 +43,7 @@
   <main id="main-content" class="container" role="main">
     <!-- Beginning map -->
     <aside id="map-container">
-      <h2 id="map-label" class="sr-only">Google Maps Widget: shows the restaurant location</h2>
+      <h2 id="map-label" class="sr-only"></h2>
       <a class="skip-link button" href="#restaurant-container">Skip the map</a>
       <div id="map" role="application"></div>
     </aside>
