--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#263238">
+  <meta name="theme-color" content="#004d40">
 
   <!-- A meaningful title to the page for better accessibility. -->
   <title>Restaurant Reviews - Find the Best New York City Restaurants</title>
