feat: Add a fallback for calling resources and add a map offline alert

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   </header>
 
   <section id="map-container">
-    <h2 id="map-label" class="sr-only">Google Maps Widget: shows restaurants location</h2>
-    <a class="skip-link button" href="#main-content">Skip the map</a>
-    <div id="map" role="application"></div>
+    <div id="map"></div>
   </section>
 
   <main id="main-content" role="main">
