feat: Handle 404 and offline errors. Add a layer for smooth loading.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div id="loading-layer"></div>
   <a class="skip-link button" href="#filter-options">Skip to main content</a>
 
   <header>
