--- a/restaurant.html
+++ b/restaurant.html
@@ -16,6 +16,7 @@
 </head>
 
 <body class="inside">
+  <div id="loading-layer"></div>
   <a class="skip-link button" href="#restaurant-container">Skip to main content</a>
 
   <!-- The HTML5 header element is not considered a banner landmark when it is descendant of nav. https://www.w3.org/TR/2017/NOTE-wai-aria-practices-1.1-20171214/examples/landmarks/banner.html -->
@@ -26,7 +27,6 @@
     <strong><a href="/">Restaurant Reviews</a></strong>
   </div>
 
-  <!-- Beginning nav -->
   <nav aria-label="Breadcrumb">
     <div class="container">
       <!-- Beginning breadcrumb -->
@@ -37,7 +37,6 @@
       <!-- End breadcrumb -->
     </div>
   </nav>
-  <!-- End nav -->
 
   <!-- Beginning main -->
   <main id="main-content" class="container" role="main">
