--- a/restaurant.html
+++ b/restaurant.html
@@ -42,6 +42,7 @@
   <main id="main-content" class="container" role="main">
     <!-- Beginning map -->
     <aside id="map-container">
+      <!-- Tha map should have a role of application. This feature is added via javascript to handle different behaviors related to internet connection status. Look at restaurant_info.js -->
       <div id="map"></div>
     </aside>
     <!-- End map -->
