feat: Add role alert in error pages

--- a/restaurant.html
+++ b/restaurant.html
@@ -42,8 +42,8 @@
   <main id="main-content" class="container" role="main">
     <!-- Beginning map -->
     <aside id="map-container">
-      <!-- Tha map should have a role of application. This feature is added via javascript to handle different behaviors related to internet connection status. Look at restaurant_info.js -->
-      <div id="map"></div>
+      <!-- Tha map should have a role of application. -->
+      <div id="map" role="application"></div>
     </aside>
     <!-- End map -->
     <!-- Beginning restaurant -->
