--- a/404.html
+++ b/404.html
@@ -16,7 +16,6 @@
 
 <body class="error-page">
   <div id="loading-layer"></div>
-  <a class="skip-link button" href="#main-content">Skip to main content</a>
   <!-- The HTML5 header element is not considered a banner landmark when it is descendant of nav. https://www.w3.org/TR/2017/NOTE-wai-aria-practices-1.1-20171214/examples/landmarks/banner.html -->
   <div role="banner">
     <!-- Relying on the title attribute is currently discouraged as many user agents do not expose the attribute in an accessible manner as required by w3c specifications. https://www.w3.org/TR/html/dom.html#the-title-attribute -->
@@ -26,7 +25,7 @@
   </div>
 
   <main id="main-content" role="main">
-    <div>
+    <div role="alert">
       <header>
         <h1>Error 404</h1>
         <p>Sorry, but the page you were trying to view does not exist.</p>
