--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </footer>
 
   <script src="js/dbhelper.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/index.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
 </body>
 
