refactor: Split dbhelper.js in two files

--- a/offline.html
+++ b/offline.html
@@ -39,7 +39,7 @@
     <p>Copyright © <script>document.write(new Date().getFullYear());</script> <strong><a href="/">Restaurant Reviews</a></strong>. All Rights Reserved.</p>
   </footer>
 
-  <script src="js/dbhelper.js"></script>
+  <script src="js/main.js"></script>
   <script>
     document.getElementById('reload-button')
       .addEventListener('click', () => {
