--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <p>Copyright © <script>document.write(new Date().getFullYear());</script> <strong>Restaurant Reviews</strong>. All Rights Reserved.</p>
   </footer>
 
+  <script src="js/main.js"></script>
   <script src="js/dbhelper.js"></script>
   <script src="js/index.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
