fix: Add calling to main.js in restaurant.html

--- a/restaurant.html
+++ b/restaurant.html
@@ -77,9 +77,8 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
-  <!-- Database helpers -->
+  <script src="js/main.js"></script>
   <script src="js/dbhelper.js"></script>
-  <!-- Main javascript file -->
   <script src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
