feat: Add async loading and rearrange javascript

--- a/src/404.html
+++ b/src/404.html
@@ -12,6 +12,8 @@
 
   <!-- Main CSS file including normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <script async src="js/main.js"></script>
 </head>
 
 <body class="error-page">
@@ -38,8 +40,6 @@
     <!-- Here the title attribute is to avoid, and the link text is enough for accessibility. See above. -->
     <p>Copyright © <script>document.write(new Date().getFullYear());</script> <strong><a href="/">Restaurant Reviews</a></strong>. All Rights Reserved.</p>
   </footer>
-
-  <script src="js/main.js"></script>
 </body>
 
 </html>
