--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,14 @@
   <!-- A meaningful title to the page for better accessibility. -->
   <title>Restaurant Reviews - Find the Best New York City Restaurants</title>
 
+  <script async src="js/dbhelper.js"></script>
+  <script async src="js/index.js"></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
+
   <!-- Main CSS file including normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <script async src="js/main.js"></script>
 </head>
 
 <body>
@@ -48,11 +54,6 @@
   <footer id="footer">
     <p>Copyright © <script>document.write(new Date().getFullYear());</script> <strong>Restaurant Reviews</strong>. All Rights Reserved.</p>
   </footer>
-
-  <script src="js/main.js"></script>
-  <script src="js/dbhelper.js"></script>
-  <script src="js/index.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
 </body>
 
 </html>
