--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -9,7 +9,6 @@
 
   <title>Restaurant Info</title>
 
-
   <!-- Beginning scripts -->
   <script async src="js/dbhelper.js"></script>
   <script async src="js/restaurant_info.js"></script>
@@ -49,8 +48,10 @@
   <main id="main-content" class="container" role="main">
     <!-- Beginning map -->
     <aside id="map-container">
-      <!-- Tha map should have a role of application. -->
-      <div id="map" role="application"></div>
+      <div id="static-map" tabindex="0" role="button" aria-label="Click to activate the map.">
+        <!-- Tha map should have a role of application. -->
+        <div id="map" role="application" style="display: none;"></div>
+      </div>
     </aside>
     <!-- End map -->
     <!-- Beginning restaurant -->
