--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,14 @@
   <!-- A meaningful title to the page for better accessibility. -->
   <title>Restaurant Reviews - Find the Best New York City Restaurants</title>
 
-  <script async src="js/dbhelper.js"></script>
-  <script async src="js/index.js"></script>
+  <script async src="js/app.js"></script>
   <script async src="js/main.js"></script>
 
   <!-- Main CSS file including normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" href="css/styles.css">
-
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
 </head>
 
 <body>
-  <div id="loading-layer"></div>
   <a class="skip-link button" href="#filter-options">Skip to main content</a>
 
   <header>
