--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -10,19 +10,15 @@
   <title>Restaurant Info</title>
 
   <!-- Beginning scripts -->
-  <script async src="js/dbhelper.js"></script>
-  <script async src="js/restaurant_info.js"></script>
+  <script async src="js/app.js"></script>
   <script async src="js/main.js"></script>
+  <!-- End scripts -->
 
   <!-- Main CSS file including normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" href="css/styles.css">
-
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxfOOcB40yMKfupF4qyfa4hwvhTclZboA&libraries=places&callback=initMap"></script>
-  <!-- End scripts -->
 </head>
 
 <body class="inside">
-  <div id="loading-layer"></div>
   <a class="skip-link button" href="#restaurant-container">Skip to main content</a>
 
   <!-- The HTML5 header element is not considered a banner landmark when it is descendant of nav. https://www.w3.org/TR/2017/NOTE-wai-aria-practices-1.1-20171214/examples/landmarks/banner.html -->
