--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#004d40">
 
   <!-- A meaningful title to the page for better accessibility. -->
   <title>Restaurant Reviews - Find the Best New York City Restaurants</title>
@@ -16,25 +15,25 @@
   <!-- Main CSS file including normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" href="css/styles.css">
 
+  <!-- Add web app manifest. -->
   <link rel="manifest" href="manifest.json">
 
-  <!-- Add some web app properties for Safari. -->
+  <!-- Set theme color. -->
+  <meta name="theme-color" content="#004d40">
+
+  <!-- Add cross browser favicon. See: https://www.kevinleary.net/cross-browser-favicons/ -->
+  <link rel="icon" type="image/png" href="img/icons/favicon.png">
+  <!--[if IE]><link rel="shortcut icon" href="img/icons/favicon.ico"/><![endif]-->
+
+  <!-- Configuring web application for Safari and iOS. See: https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html -->
+  <meta name="apple-mobile-web-app-title" content="NYCRR">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="NYCRR">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-57x57.png" sizes="57x57">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-60x60.png" sizes="60x60">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-72x72.png" sizes="72x72">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-76x76.png" sizes="76x76">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-114x114.png" sizes="114x114">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-120x120.png" sizes="120x120">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-144x144.png" sizes="144x144">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-152x152.png" sizes="152x152">
-  <link rel="apple-touch-icon" href="img/icons/apple-icon-180x180.png" sizes="180x180">
+  <link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
 
-  <!-- Add some web app properties for Microsoft browsers. -->
-  <meta name="msapplication-TileImage" content="img/icons/icon-144x144.png">
-  <meta name="msapplication-TileColor" content="#fff">
+  <!-- Set app name and add configuration for Microsoft IE9-11 browsers. See: https://technet.microsoft.com/en-us/windows/dn255024(v=vs.60) and https://technet.microsoft.com/en-us/windows/dn320426(v=vs.60) -->
+  <meta name="application-name" content="NYCRR">
+  <meta name="msapplication-config" content="browserconfig.xml">
 </head>
 
 <body>
